--- a/ru/troubleshooting/errors/0020.md
+++ b/ru/troubleshooting/errors/0020.md
@@ -1,10 +1,10 @@
-# 0020: Variable is not declared as array
+# 0020: Переменная не объявлена как массив
 
-You're using the short array notation, but the array is not declared.
+Компилятор встретил переменную - элемент массива, при этом этот массив не был объявлен.
 
-**Possible solutions:** [declare](../../coding/arrays.md#array-declaration) the array using `VAR..END`:
+**Возможные решения**: [объявите](../../coding/arrays.md#obyavlenie-massivov) массив, используя конструкцию `VAR..END`:
 
-```
+```text
 var
     $var: array 10 of Int
 end
