--- a/ru/troubleshooting/errors/0054.md
+++ b/ru/troubleshooting/errors/0054.md
@@ -1,12 +1,13 @@
-# 0054: Label not found
+# 0054: Метка не найдена
 
-The compiler can't find the [label](../../coding/data-types.md#labels) anywhere in the script.
+Компилятор не смог найти [метку](../../coding/data-types.md#metki) в скрипте.
 
-**Possible solutions:** update the reference to match the existing label:
+**Возможные решения**: укажите имя существующей метки:
 
-```
-jump @start // error
-jump @begin // OK
+```text
+jump @start // ошибка
+jump @begin // верно
 
 :begin
 ```
+
