--- a/ru/troubleshooting/errors/0068.md
+++ b/ru/troubleshooting/errors/0068.md
@@ -1,5 +1,6 @@
-# 0068: Forbidden character in identifier
+# 0068: Неверный символ в идентификаторе
 
-The compiler finds an forbidden character in a [variable](../../coding/variables.md) name, [label](../../coding/data-types.md#labels), or any other identifier. Only digits, letters and the underscore (`_`) are allowed.
+В имени [переменной](../../coding/variables.md), [метке](../../coding/data-types.md#metki) или другом идентификаторе найдены недопустимые символы. Допустимыми считаются цифры, латинские буквы и знак подчеркивания \(`_`\).
 
-**Possible solutions:** update the name to include only allowed characters.
+**Возможные решения**: измените идентификатор в соответствии с предъявляемыми требованиями.
+
