--- a/ru/troubleshooting/errors/0001.md
+++ b/ru/troubleshooting/errors/0001.md
@@ -1,5 +1,6 @@
-# 0001: INI file not found
+# 0001: INI файл не найден
 
-Sanny Builder can't find [the opcodes definitions file](../../edit-modes/opcodes-list-scm.ini.md). The compiler can not work without it.
+Sanny Builder не может найти [INI файл](../../edit-modes/opcodes-list-scm.ini.md), содержащий перечень всех опкодов и их параметров. Без этого файла работа компилятора невозможна.
 
-**Possible solutions: **check if the file set in the edit mode [configuration](https://docs.sannybuilder.com/edit-modes#opcodes) exists.\
+**Возможные решения**: проверьте файл, указанный в [конфигурации](../../edit-modes/#opcodes) режима редактирования, существует.
+
