--- a/ru/troubleshooting/errors/0009.md
+++ b/ru/troubleshooting/errors/0009.md
@@ -1,5 +1,6 @@
-# 0009: Opcodes list not found
+# 0009: Список опкодов не найден
 
-Disassembler or compiler can't work without [opcodes definitions](../../edit-modes/opcodes-list-scm.ini.md) (see [0001](0001.md)).
+Дизассемблер или компилятор не могут прочитать список опкодов \(см. [0001](0001.md)\).
 
-**Possible solutions:** check if the file set in the edit mode [configuration](https://docs.sannybuilder.com/edit-modes#opcodes) exists.
+**Возможные решения**: проверьте файл, указанный в [конфигурации](../../edit-modes/#opcodes) режима редактирования, существует.
+
