--- a/ru/troubleshooting/errors/0011.md
+++ b/ru/troubleshooting/errors/0011.md
@@ -1,5 +1,6 @@
-# 0011: Unknown opcode
+# 0011: Неизвестный опкод
 
-The disassembler finds an opcode that has not been defined in the [INI file](../../edit-modes/opcodes-list-scm.ini.md).
+Дизассемблер встретил опкод, значение которого не определено в [INI файле](../../edit-modes/opcodes-list-scm.ini.md).
 
-**Possible solutions:** update opcode definitions, or toggle the [debug option](../../editor/console.md#ignore_unknown) `IGNORE_UNKNOWN`.\
+**Возможные решения**: обновите INI файл или включите отладочную [опцию](../../editor/console.md#ignore_unknown) `IGNORE_UNKNOWN`.
+
