--- a/ru/troubleshooting/errors/0036.md
+++ b/ru/troubleshooting/errors/0036.md
@@ -1,11 +1,11 @@
-# 0036: Local mission variable is out of range
+# 0036: Локальная переменная миссии вне допустимых границ
 
-The local variable in a mission body was given a name that exceeds the limit in this game.
+[Локальной переменной](../../coding/variables.md#lokalnye-peremennye) в теле миссии было присвоено имя, которое превышает допустимое значение для данной игры.
 
-**Possible solutions:** update the name to meet the [limits](../../scm-documentation/gta-limits.md) or turn off the `Ranges check` [option](../../editor/options/general.md#ranges-check):
+**Возможные решения**: укажите иное имя в соответствии с [лимитами](../../scm-documentation/gta-limits.md), либо отключите проверку переменных в [опциях](../../editor/options/general.md#proverka-peremennykh):
 
-```
-1024@ = 1 // error
-1023@ = 1 // OK
+```text
+1024@ = 1 // ошибка
+1023@ = 1 // верно
 ```
 
