--- a/ru/troubleshooting/errors/0037.md
+++ b/ru/troubleshooting/errors/0037.md
@@ -1,27 +1,28 @@
-# 0037: Debug script not found
+# 0037: Отладочный скрипт не найден
 
-The parameter value of the opcode `05B6` is too high.
+Значение параметра в опкоде `05B6` слишком большое.
 
-This opcode references a chunk of debug data left by the game developers. This data is cached in `*.bin` files in the Sanny Builder directory. It has no special meaning in runtime and is left in the disassembled code only to preserve one-to-one match with the original script.
+Опкод `05B6` ссылается на часть отладочной информации, оставленной разработчиками игры. Эта информация закэширована в `*.bin` файлах в папке Sanny Builder. Она не используется в игре и присутствует в дизассемблированном скрипте, только чтобы обеспечить компиляцию в файл, идентичный оригиналу.
 
 {% hint style="info" %}
-Since v3.6 Sanny Builder deprecates the old form of this opcode with a single number parameter in favor of the new `k` [type](../../edit-modes/opcodes-list-scm.ini.md#parameter-types). Now this instruction accepts a string literal enclosed in double quotes:
+Начиная с версии 3.6 формат этого опкода с единственным числовым параметром является устаревшим. Рекомендованной формой является использование нового [типа данных](../../edit-modes/opcodes-list-scm.ini.md#tipy-parametrov) `k -` а именно строкового литерала в двойных кавычках:
 
-```
-05B6: 1 // before v3.6
-05B6: "some string" // after v3.6
+```text
+05B6: 1 // до версии 3.6
+05B6: "some string" // начиная с 3.6
 ```
 
-Similar opcodes in SA Mobile have been updated too:
+Похожие опкоды в режиме SA Mobile также были обновлены:
 
-```
+```text
 0A66: write_log "Mission Page 0" 
 0A67: write_log_int 15@ 15@ 15@ "taking money off player" 
 0A68: write_log_float 10@ 10@ 10@ "debug" 
 0A6E: set_widget_texture 54 "hud_check" 
 ```
 
-More information: [https://github.com/sannybuilder/dev/issues/21](https://github.com/sannybuilder/dev/issues/21)
+Больше информации: [https://github.com/sannybuilder/dev/issues/21](https://github.com/sannybuilder/dev/issues/21)
 {% endhint %}
 
-**Possible solutions:** use the number produced by the disassembler, or delete this opcode from the script.
+**Возможные решения**: укажите число, которое было получено дизассемблером, либо удалите этот опкод из скрипта.
+
