--- a/ru/troubleshooting/errors/0083.md
+++ b/ru/troubleshooting/errors/0083.md
@@ -1,16 +1,17 @@
-# 0083: Unknown model ID
+# 0083: Неизвестный ID модели
 
-The compiler is unable to resolve the model id using the `.ide` files configured for the current [edit mode](https://docs.sannybuilder.com/edit-modes#ide).
+Компилятор не смог определить ID модели при помощи `.ide` файлов, заданных для текущего [режима редактирования](../../edit-modes/#ide).
 
-It may happen in a header-less script (e.g. a CLEO script or any script compiled with the `{$EXTERNAL}` [directive](../../coding/directives.md#usdexternal)) where all models must be compiled with their in-game id.
+Это ошибка возникает в скриптах без заголовка \(например, CLEO скрипте или скрипте с [директивой](../../coding/directives.md#usdexternal) `{$EXTERNAL}`\), в которых все модели должны быть скомпилированы с использованием числового ID, определенного в `.ide` файле.
 
-**Possible solutions:** use a model id instead of the name. To find the id use the Sanny's built-in [conversion tool](../../editor/options/hotkeys.md) (`Ctrl+Alt+H`):
+**Возможные решения**: используйте числовой ID модели вместо имени. Чтобы найти нужный ID воспользуйтесь встроенной в Sanny Builder функцией [конвертации имени](../../editor/options/hotkeys.md) модели в ID \(`Ctrl+Alt+H`\):
 
-```
+```text
 {$CLEO}
 
-0107: $o = create_object #KEYCARD at 0 0 0 // error, can't find KEYCARD
-0107: $o = create_object 1581 at 0 0 0 // OK
+0107: $o = create_object #KEYCARD at 0 0 0 // ошибка, KEYCARD не найдено
+0107: $o = create_object 1581 at 0 0 0 // верно
 ```
 
-If the the edit mode references `.ide` files from the game directory make sure this directory is set in the [options](../../editor/options/general.md#game-directory).
+Если конфигурация режима редактирования ссылается на `.ide` файлы в директории игры, убедитесь, что эта директория задана в [опциях](../../options/general.md#direktoriya-igry) программы.
+
